testsuite/poke.pkl/scons-diag-3.pk
/* { dg-do compile } */

deftype Foo = struct { int i; long j; };

defvar a = Foo { i = 10, 20 };  /* { dg-error "" } */
